--- a/src/Oleg/TestBundle/Resources/config/doctrine/Category.orm.yml
+++ b/src/Oleg/TestBundle/Resources/config/doctrine/Category.orm.yml
@@ -1,6 +1,6 @@
-Oleg\TestBundle\Entity\Post:
+Oleg\TestBundle\Entity\Category:
     type: entity
-    table: post
+    table: category
     id:
         id:
             type: integer
@@ -10,19 +10,17 @@ Oleg\TestBundle\Entity\Post:
     fields:
         title:
             type: string
-            length: '255'
-        description:
+            length: 255
+        slug:
             type: string
-            length: '1000'
-            nullable: true
-        content:
-            type: string
-            length: '4000'
+            length: 255
         createdAt:
             type: datetime
-            column: created_at
         updatedAt:
             type: datetime
             column: updated_at
-            nullable: true
+    oneToMany:
+        news:
+            targetEntity: News
+            mappedBy: category
     lifecycleCallbacks: {  }
