add created news, auto slug and add to news category

--- a/src/Oleg/TestBundle/Resources/config/doctrine/News.orm.yml
+++ b/src/Oleg/TestBundle/Resources/config/doctrine/News.orm.yml
@@ -19,6 +19,9 @@ Oleg\TestBundle\Entity\News:
         content:
             type: string
             length: '4000'
+        slug:
+            type: string
+            length: '255'
         createdAt:
             type: datetime
             column: created_at
