add service create article

--- a/src/Oleg/TestBundle/Resources/config/doctrine/Post.orm.yml
+++ b/src/Oleg/TestBundle/Resources/config/doctrine/Post.orm.yml
@@ -1,6 +1,7 @@
 Oleg\TestBundle\Entity\Post:
     type: entity
     table: post
+    repositoryClass: Oleg\TestBundle\Repository\PostRepository
     id:
         id:
             type: integer
