--- a/src/Oleg/TestBundle/Resources/config/services.yml
+++ b/src/Oleg/TestBundle/Resources/config/services.yml
@@ -2,3 +2,8 @@ services:
 #    oleg_test.example:
 #        class: Oleg\TestBundle\Example
 #        arguments: [@service_id, "plain_value", %parameter%]
+services:
+    news_manager:
+        class: Oleg\TestBundle\Service\NewsManager
+        arguments: 
+            - @service_container
