--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -2,3 +2,15 @@ oleg_test:
     resource: "@OlegTestBundle/Resources/config/routing.yml"
     prefix:   /
 
+# app/config/routing.yml
+admin_area:
+    resource: "@SonataAdminBundle/Resources/config/routing/sonata_admin.xml"
+    prefix: /admin
+    
+# app/config/routing.yml
+
+# ...
+_sonata_admin:
+    resource: .
+    type: sonata_admin
+    prefix: /admin
