--- a/src/Oleg/TestBundle/Resources/config/services.yml
+++ b/src/Oleg/TestBundle/Resources/config/services.yml
@@ -7,3 +7,9 @@ services:
         class: Oleg\TestBundle\Service\NewsManager
         arguments: 
             - @service_container
+
+    admin.news:
+        class: Oleg\TestBundle\Admin\ArticleAdmin
+        arguments: [~, Oleg\TestBundle\Entity\News, ~]
+        tags:
+            - { name: sonata.admin, manager_type: orm, label: News }
